Updated indexWorking.htm and mainWorking.css

--- a/indexWorking.htm
+++ b/indexWorking.htm
@@ -48,7 +48,7 @@
     <li>Seattle <span>July 16</span></li>
     </ul>
     </section>
-    <section class="news">
+    <section id="rights" class="news">
     <h2>Photographers rights</h2>
     <p>Due to the heightened security concerns around the country, it has become common to find photographers routinely challenged when taking photographs in public places. With that in mind, we invite you to join us in a free forum as noted photographer Shea Hansen presents "Photographer's Rights in a Post 9/11 World."</p>
     <p>Shea will discuss what your rights are when taking photos in a public space. Following her talk we'll have an open forum where you can ask questions, compare experiences, and become better informed as to what your responsibilities are as amateur photographers.</p>
