--- a/indexWorking.htm
+++ b/indexWorking.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Welcome to Desolve</title>
+<title>Welcome to Changed Desolve</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
